# durak

./: .gitignore  Cargo.toml  README.md
durak/: Cargo.toml  test_log.2023-03-12
durak-core/: Cargo.toml
durak-core/src/: card.rs  game.rs  lib.rs  prelude.rs  toplaystate.rs
durak-players/: Cargo.toml
durak-players/src/: cli_player.rs  dummy_player.rs  lib.rs  tui_player.rs
durak-players/src/durak_net/: client_player.rs  server.rs  server_player.rs
durak/src/: cli_player.rs  dummy_player.rs  dummydurakplayer.rs  main.rs  tui2durakplayer.rs  tui3durakplayer.rs  tui_player.rs  tuidurakplayer.rs
durak/src/durak_net/: client_player.rs  clientplayer.rs  mod.rs  netdurakplayer.rs.bak  server.rs  server_player.rs  serverplayer.rs
src/: card.rs  dummydurakplayer.rs  lib.rs  main.rs  netdurakplayer.rs  toplaystate.rs  tui2durakplayer.rs  tui3durakplayer.rs  tuidurakplayer.rs
src/durak_net/: clientplayer.rs  server.rs  serverplayer.rs
