[package]
name = "durak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for game initialization
rand="0.8.5"

# for logging
tracing="0.1"
tracing-subscriber="0.3"
tracing-appender="0.2"

# for network
serde={version="1.0",features=["derive"]}
