[package]
name = "durak-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for errors
anyhow = "1.0"
thiserror = "1.0"

# for game initialization
rand="0.8.5"

# for logging
tracing="0.1"
tracing-subscriber={version="0.3",features=["env-filter"]}
tracing-appender="0.2"

# for network serialization
serde={version="1.0",features=["derive"]}
serde_json="1.0"
