[package]
name = "durak"
version = "0.1.0"
edition = "2021"
default-run = "durak"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
durak-core = { path = "../durak-core" }
durak-players = { path = "../durak-players" }

# for errors
anyhow="1.0"

# for game initialization
rand="0.8.5"

# for logging
tracing="0.1"
tracing-subscriber={version="0.3",features=["env-filter"]}
tracing-appender="0.2"

# for network serialization
serde={version="1.0",features=["derive"]}
serde_json="1.0"

# for TUI
cursive="0.20"
crossbeam-channel="0.5"

# for async
tokio={version="1.28.2",features=["full"]}

[[bin]]
name = "durak-server"
path = "src/bin/server.rs"

[[bin]]
name = "durak-client"
path = "src/bin/client.rs"
